// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`renderNotificationEmail snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <title>docs.plus</title>
  <!--[if mso]>
  <style type="text/css">
    table { border-collapse: collapse; }
    .content { width: 600px !important; }
  </style>
  <![endif]-->
</head>
<body style="margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; background-color: #f5f5f5; -webkit-font-smoothing: antialiased;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #f5f5f5;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" class="content" width="600" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border: 1px solid #dce3ed; border-radius: 10px; overflow: hidden;">

          <tr>
            <td style="background: #1a73e8; padding: 24px 32px; text-align: center;">
              <h1 style="margin: 0; color: #ffffff; font-size: 22px; font-weight: 600; letter-spacing: -0.3px;">docs.plus</h1>
            </td>
          </tr>

          <tr>
            <td style="padding: 32px;">
              <p style="margin: 0 0 24px; color: #1f2937; font-size: 16px; line-height: 1.5;">
  Hi Jane Smith,
</p>


<p style="margin: 0 0 16px; color: #69707e; font-size: 13px;">
  
    <span style="color: #1f2937; font-weight: 500;">API Documentation</span>
  
   › 
  
    <span>#general</span>
  
</p>


<!-- Notification Card -->
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #f9fafb; border-radius: 10px; border: 1px solid #e5e7eb;">
  <tr>
    <td style="padding: 24px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td width="56" valign="top">
            <table role="presentation" cellpadding="0" cellspacing="0" style="width: 44px; height: 44px; border-radius: 50%; background: #1a73e8;">
    <tr>
      <td align="center" valign="middle" style="color: #ffffff; font-weight: 600; font-size: 17px; font-family: Helvetica, Arial, sans-serif;">
        J
      </td>
    </tr>
  </table>
          </td>
          <td style="padding-left: 12px;" valign="top">
            <p style="margin: 0 0 4px; color: #1a73e8; font-size: 14px; font-weight: 600;">
              John Doe mentioned you
            </p>
            
            <p style="margin: 0; color: #69707e; font-size: 15px; line-height: 1.5;">
              "Hey @Jane, can you review the API docs?"
            </p>
            
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>

<!-- CTA Button -->
<table role="presentation" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td align="center" style="padding-top: 24px;">
      <a href="https://docs.plus/api-docs?chatroom=general" style="display: inline-block; background: #1a73e8; color: #ffffff; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-size: 14px; font-weight: 500; ">View Message</a>
    </td>
  </tr>
</table>


            </td>
          </tr>

          <tr>
            <td style="padding: 24px 32px; border-top: 1px solid #e5e7eb; background-color: #f9fafb;">
              <p style="margin: 0 0 8px; color: #636a76; font-size: 12px; text-align: center; line-height: 1.5;">
                You're receiving this because you have email notifications enabled.
              </p>
              <p style="margin: 0; color: #636a76; font-size: 12px; text-align: center;">
                
    <a href="https://docs.plus/#settings?tab=notifications" style="color: #1a73e8; text-decoration: none;">Manage preferences</a>
    <span style="color: #e5e7eb; margin: 0 8px;">|</span>
    <a href="https://docs.plus/unsubscribe" style="color: #1a73e8; text-decoration: none;">Unsubscribe</a>
  
              </p>
            </td>
          </tr>

        </table>

        <!-- Copyright -->
        <p style="margin: 24px 0 0; color: #636a76; font-size: 11px; text-align: center;">
          &copy; 2026 docs.plus. All rights reserved.
        </p>
      </td>
    </tr>
  </table>
</body>
</html>

"
`;

exports[`buildDigestEmail snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <title>docs.plus</title>
  <!--[if mso]>
  <style type="text/css">
    table { border-collapse: collapse; }
    .content { width: 960px !important; }
  </style>
  <![endif]-->
</head>
<body style="margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; background-color: #eef1f6; -webkit-font-smoothing: antialiased;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #eef1f6;">
    <tr>
      <td align="center" style="padding: 32px 16px;">
        <table role="presentation" class="content" width="100%" cellpadding="0" cellspacing="0" style="max-width: 960px; background-color: #ffffff; border: 1px solid #dce3ed; border-radius: 10px;">

          <tr>
            <td style="padding: 28px 32px 20px;">
              

<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 8px;">
  <tr>
    <td style="padding-bottom: 18px; border-bottom: 1px solid #dce3ed;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td width="36" valign="middle">
            <a href="https://docs.plus/api-docs" style="text-decoration: none;">
              <img src="https://docs.plus/email/mark.png" width="32" height="32" alt="docs.plus" style="display: block; width: 32px; height: 32px; border: 0;">
            </a>
          </td>
          <td valign="middle" style="padding-left: 10px;">
            <a href="https://docs.plus/api-docs" style="color: #0f172a; font-size: 20px; font-weight: 600; line-height: 1.2; text-decoration: none;">API Documentation</a>
          </td>
          <td width="120" align="right" valign="middle">
            <table role="presentation" cellpadding="0" cellspacing="0" align="right">
              <tr>
                <td valign="bottom" style="padding-top: 6px;">
                  <a href="https://docs.plus/api-docs#notifications" style="text-decoration: none;"><img src="https://docs.plus/email/bell.png" width="20" height="20" alt="Notifications" style="display: block; width: 20px; height: 20px; border: 0;"></a>
                </td>
                <td valign="top" style="padding-right: 14px;">
                  <a href="https://docs.plus/api-docs#notifications" style="display: block; height: 14px; min-width: 14px; padding: 0 4px; border-radius: 7px; background-color: #dc2626; color: #ffffff; font-size: 9px; font-weight: 700; line-height: 14px; text-align: center; text-decoration: none; font-family: Arial, sans-serif;">2</a>
                </td>
                <td valign="middle"><table role="presentation" cellpadding="0" cellspacing="0" style="width: 48px; height: 48px; border-radius: 50%; background: #1a73e8;">
    <tr>
      <td align="center" valign="middle" style="color: #ffffff; font-weight: 600; font-size: 19px; font-family: Helvetica, Arial, sans-serif;">
        J
      </td>
    </tr>
  </table></td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>



<p style="margin: 22px 0 0;">
  <a href="https://docs.plus/api-docs?chatroom=ch-001" style="color: #0f172a; font-size: 18px; font-weight: 700; line-height: 1.25; text-decoration: none;"># general</a>
</p>



<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-top: 12px;">
  <tr>
    <td width="40" valign="top"><table role="presentation" cellpadding="0" cellspacing="0" style="width: 32px; height: 32px; border-radius: 50%; background: #1a73e8;">
    <tr>
      <td align="center" valign="middle" style="color: #ffffff; font-weight: 600; font-size: 12px; font-family: Helvetica, Arial, sans-serif;">
        J
      </td>
    </tr>
  </table></td>
    <td style="padding-left: 10px;" valign="top">
      <p style="margin: 0; color: #1f2937; font-size: 14px; font-weight: 600; line-height: 1.3;">
        <span style="color: #1a73e8;">@</span> John Doe
      </p>
      <p style="margin: 2px 0 0; color: #69707e; font-size: 13px; line-height: 1.4;">Hey @Jane, review the auth section?</p>
    </td>
    <td width="48" align="right" valign="middle">
      <a href="https://docs.plus/api-docs?chatroom=ch-001" style="color: #1a73e8; font-size: 13px; font-weight: 600; text-decoration: none;">View</a>
    </td>
  </tr>
</table>



<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-top: 12px;">
  <tr>
    <td width="40" valign="top"><table role="presentation" cellpadding="0" cellspacing="0" style="width: 32px; height: 32px; border-radius: 50%; background: #1a73e8;">
    <tr>
      <td align="center" valign="middle" style="color: #ffffff; font-weight: 600; font-size: 12px; font-family: Helvetica, Arial, sans-serif;">
        A
      </td>
    </tr>
  </table></td>
    <td style="padding-left: 10px;" valign="top">
      <p style="margin: 0; color: #1f2937; font-size: 14px; font-weight: 600; line-height: 1.3;">
        <span style="color: #1a73e8;">↩</span> Alice Chen
      </p>
      <p style="margin: 2px 0 0; color: #69707e; font-size: 13px; line-height: 1.4;">Added rate limiting docs.</p>
    </td>
    <td width="48" align="right" valign="middle">
      <a href="https://docs.plus/api-docs?chatroom=ch-001" style="color: #1a73e8; font-size: 13px; font-weight: 600; text-decoration: none;">View</a>
    </td>
  </tr>
</table>



<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin: 22px 0 28px; border-top: 1px solid #dce3ed;">
  <tr>
    <td valign="middle" style="padding-top: 10px; color: #69707e; font-size: 12px; line-height: 1.4;"></td>
    <td align="right" valign="middle" style="padding-top: 10px; font-size: 12px; white-space: nowrap;">
    <a href="https://docs.plus/#settings?tab=notifications" style="color: #1a73e8; text-decoration: none;">Manage preferences</a>
    <span style="color: #e5e7eb; margin: 0 8px;">|</span>
    <a href="https://docs.plus/unsubscribe" style="color: #1a73e8; text-decoration: none;">Unsubscribe</a>
  </td>
  </tr>
</table>



            </td>
          </tr>

        </table>

        <!-- Copyright -->
        <p style="margin: 24px 0 0; color: #636a76; font-size: 11px; text-align: center;">
          &copy; 2026 docs.plus. All rights reserved.
        </p>
      </td>
    </tr>
  </table>
</body>
</html>

"
`;

exports[`buildDigestEmail snapshot — content changes 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <title>docs.plus</title>
  <!--[if mso]>
  <style type="text/css">
    table { border-collapse: collapse; }
    .content { width: 960px !important; }
  </style>
  <![endif]-->
</head>
<body style="margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; background-color: #eef1f6; -webkit-font-smoothing: antialiased;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #eef1f6;">
    <tr>
      <td align="center" style="padding: 32px 16px;">
        <table role="presentation" class="content" width="100%" cellpadding="0" cellspacing="0" style="max-width: 960px; background-color: #ffffff; border: 1px solid #dce3ed; border-radius: 10px;">

          <tr>
            <td style="padding: 28px 32px 20px;">
              

<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 8px;">
  <tr>
    <td style="padding-bottom: 18px; border-bottom: 1px solid #dce3ed;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td width="36" valign="middle">
            <a href="https://docs.plus/api-docs" style="text-decoration: none;">
              <img src="https://docs.plus/email/mark.png" width="32" height="32" alt="docs.plus" style="display: block; width: 32px; height: 32px; border: 0;">
            </a>
          </td>
          <td valign="middle" style="padding-left: 10px;">
            <a href="https://docs.plus/api-docs" style="color: #0f172a; font-size: 20px; font-weight: 600; line-height: 1.2; text-decoration: none;">API Documentation</a>
          </td>
          <td width="120" align="right" valign="middle">
            <table role="presentation" cellpadding="0" cellspacing="0" align="right">
              <tr>
                <td valign="bottom" style="padding-top: 6px;">
                  <a href="https://docs.plus/api-docs#notifications" style="text-decoration: none;"><img src="https://docs.plus/email/bell.png" width="20" height="20" alt="Notifications" style="display: block; width: 20px; height: 20px; border: 0;"></a>
                </td>
                <td valign="top" style="padding-right: 14px;">
                  <a href="https://docs.plus/api-docs#notifications" style="display: block; height: 14px; min-width: 14px; padding: 0 4px; border-radius: 7px; background-color: #dc2626; color: #ffffff; font-size: 9px; font-weight: 700; line-height: 14px; text-align: center; text-decoration: none; font-family: Arial, sans-serif;">3</a>
                </td>
                <td valign="middle"><table role="presentation" cellpadding="0" cellspacing="0" style="width: 48px; height: 48px; border-radius: 50%; background: #1a73e8;">
    <tr>
      <td align="center" valign="middle" style="color: #ffffff; font-weight: 600; font-size: 19px; font-family: Helvetica, Arial, sans-serif;">
        J
      </td>
    </tr>
  </table></td>
              </tr>
            </table>
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>



<p style="margin: 22px 0 0;">
  <a href="https://docs.plus/api-docs?id=rate-limiting" style="color: #0f172a; font-size: 18px; font-weight: 700; line-height: 1.25; text-decoration: none;">Rate limiting</a><span style="margin-left: 6px; color: #69707e; font-size: 12px; font-weight: 400;">Edited</span>
</p>



<p style="margin: 22px 0 0;">
  <a href="https://docs.plus/api-docs?id=retries" style="color: #0f172a; font-size: 18px; font-weight: 700; line-height: 1.25; text-decoration: none;">Retries</a>
</p>



<p style="margin: 12px 0 0; color: #1f2937; font-size: 15px; line-height: 1.45;">
<span style="">Retries use </span><span style="background-color:#fee2e2;color:#4b5563;text-decoration:line-through;border-radius:2px;">a new</span><span style="background-color:#d1fae5;border-radius:2px;">the same</span><span style=""> key.</span>
</p>



<p style="margin: 22px 0 0;">
  <a href="https://docs.plus/api-docs" style="color: #0f172a; font-size: 18px; font-weight: 700; line-height: 1.25; text-decoration: none;"><span style="background-color:#fee2e2;color:#4b5563;text-decoration:line-through;border-radius:2px;">Old limits</span></a>
</p>



<p style="margin: 12px 0 0; color: #1f2937; font-size: 15px; line-height: 1.45;">
<span style="background-color:#fee2e2;color:#4b5563;text-decoration:line-through;border-radius:2px;">Each key allows ten calls a minute.</span>
</p>



<p style="margin: 22px 0 0;">
  <a href="https://docs.plus/api-docs?chatroom=ch-001" style="color: #0f172a; font-size: 18px; font-weight: 700; line-height: 1.25; text-decoration: none;"># general</a>
</p>



<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-top: 12px;">
  <tr>
    <td width="40" valign="top"><table role="presentation" cellpadding="0" cellspacing="0" style="width: 32px; height: 32px; border-radius: 50%; background: #1a73e8;">
    <tr>
      <td align="center" valign="middle" style="color: #ffffff; font-weight: 600; font-size: 12px; font-family: Helvetica, Arial, sans-serif;">
        J
      </td>
    </tr>
  </table></td>
    <td style="padding-left: 10px;" valign="top">
      <p style="margin: 0; color: #1f2937; font-size: 14px; font-weight: 600; line-height: 1.3;">
        <span style="color: #1a73e8;">@</span> John Doe
      </p>
      <p style="margin: 2px 0 0; color: #69707e; font-size: 13px; line-height: 1.4;">Hey @Jane, review the auth section?</p>
    </td>
    <td width="48" align="right" valign="middle">
      <a href="https://docs.plus/api-docs?chatroom=ch-001" style="color: #1a73e8; font-size: 13px; font-weight: 600; text-decoration: none;">View</a>
    </td>
  </tr>
</table>



<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-top: 12px;">
  <tr>
    <td width="40" valign="top"><table role="presentation" cellpadding="0" cellspacing="0" style="width: 32px; height: 32px; border-radius: 50%; background: #1a73e8;">
    <tr>
      <td align="center" valign="middle" style="color: #ffffff; font-weight: 600; font-size: 12px; font-family: Helvetica, Arial, sans-serif;">
        A
      </td>
    </tr>
  </table></td>
    <td style="padding-left: 10px;" valign="top">
      <p style="margin: 0; color: #1f2937; font-size: 14px; font-weight: 600; line-height: 1.3;">
        <span style="color: #1a73e8;">↩</span> Alice Chen
      </p>
      <p style="margin: 2px 0 0; color: #69707e; font-size: 13px; line-height: 1.4;">Added rate limiting docs.</p>
    </td>
    <td width="48" align="right" valign="middle">
      <a href="https://docs.plus/api-docs?chatroom=ch-001" style="color: #1a73e8; font-size: 13px; font-weight: 600; text-decoration: none;">View</a>
    </td>
  </tr>
</table>



<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin: 22px 0 28px; border-top: 1px solid #dce3ed;">
  <tr>
    <td valign="middle" style="padding-top: 10px; color: #69707e; font-size: 12px; line-height: 1.4;">✏️ Changed since you left, 1 day ago.</td>
    <td align="right" valign="middle" style="padding-top: 10px; font-size: 12px; white-space: nowrap;">
    <a href="https://docs.plus/#settings?tab=notifications" style="color: #1a73e8; text-decoration: none;">Manage preferences</a>
    <span style="color: #e5e7eb; margin: 0 8px;">|</span>
    <a href="https://docs.plus/unsubscribe" style="color: #1a73e8; text-decoration: none;">Unsubscribe</a>
  </td>
  </tr>
</table>



            </td>
          </tr>

        </table>

        <!-- Copyright -->
        <p style="margin: 24px 0 0; color: #636a76; font-size: 11px; text-align: center;">
          &copy; 2026 docs.plus. All rights reserved.
        </p>
      </td>
    </tr>
  </table>
</body>
</html>

"
`;

exports[`renderNewDocumentEmail snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <title>docs.plus</title>
  <!--[if mso]>
  <style type="text/css">
    table { border-collapse: collapse; }
    .content { width: 600px !important; }
  </style>
  <![endif]-->
</head>
<body style="margin: 0; padding: 0; font-family: Helvetica, Arial, sans-serif; background-color: #f5f5f5; -webkit-font-smoothing: antialiased;">
  <table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #f5f5f5;">
    <tr>
      <td align="center" style="padding: 40px 20px;">
        <table role="presentation" class="content" width="600" cellpadding="0" cellspacing="0" style="background-color: #ffffff; border: 1px solid #dce3ed; border-radius: 10px; overflow: hidden;">

          <tr>
            <td style="background: #1a73e8; padding: 24px 32px; text-align: center;">
              <h1 style="margin: 0; color: #ffffff; font-size: 22px; font-weight: 600; letter-spacing: -0.3px;">docs.plus</h1>
            </td>
          </tr>

          <tr>
            <td style="padding: 32px;">
              <p style="margin: 0 0 24px; color: #1f2937; font-size: 16px; font-weight: 600;">
  New Document Created
</p>

<!-- Creator Card -->
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="background-color: #f9fafb; border-radius: 10px; border: 1px solid #e5e7eb; margin-bottom: 24px;">
  <tr>
    <td style="padding: 24px;">
      <table role="presentation" width="100%" cellpadding="0" cellspacing="0">
        <tr>
          <td width="60" valign="top">
            <table role="presentation" cellpadding="0" cellspacing="0" style="width: 48px; height: 48px; border-radius: 50%; background: #1a73e8;">
    <tr>
      <td align="center" valign="middle" style="color: #ffffff; font-weight: 600; font-size: 19px; font-family: Helvetica, Arial, sans-serif;">
        A
      </td>
    </tr>
  </table>
          </td>
          <td style="padding-left: 12px;" valign="top">
            <p style="margin: 0 0 4px; color: #1f2937; font-size: 15px; font-weight: 600;">
              Alice Chen
            </p>
            
            <p style="margin: 0; color: #69707e; font-size: 13px;">alice@example.com</p>
            
          </td>
        </tr>
      </table>
    </td>
  </tr>
</table>

<!-- Document Details -->
<table role="presentation" width="100%" cellpadding="0" cellspacing="0" style="margin-bottom: 24px;">
  <tr>
    <td style="padding: 8px 0; border-bottom: 1px solid #e5e7eb;">
      <strong style="color: #1f2937; font-size: 13px;">Name</strong>
    </td>
    <td style="padding: 8px 0; border-bottom: 1px solid #e5e7eb; color: #69707e; font-size: 13px;">
      Product Roadmap Q1
    </td>
  </tr>
  <tr>
    <td style="padding: 8px 0; border-bottom: 1px solid #e5e7eb;">
      <strong style="color: #1f2937; font-size: 13px;">Slug</strong>
    </td>
    <td style="padding: 8px 0; border-bottom: 1px solid #e5e7eb;">
      <code style="background: #f3f4f6; padding: 2px 6px; border-radius: 4px; font-size: 12px; color: #69707e;">product-roadmap-q1</code>
    </td>
  </tr>
  <tr>
    <td style="padding: 8px 0; border-bottom: 1px solid #e5e7eb;">
      <strong style="color: #1f2937; font-size: 13px;">ID</strong>
    </td>
    <td style="padding: 8px 0; border-bottom: 1px solid #e5e7eb;">
      <code style="background: #f3f4f6; padding: 2px 6px; border-radius: 4px; font-size: 11px; color: #636a76;">doc-abc-123</code>
    </td>
  </tr>
  <tr>
    <td style="padding: 8px 0;">
      <strong style="color: #1f2937; font-size: 13px;">Created</strong>
    </td>
    <td style="padding: 8px 0; color: #69707e; font-size: 13px;">
      2026-02-17T12:00:00Z
    </td>
  </tr>
</table>

<!-- CTA Button -->
<table role="presentation" width="100%" cellpadding="0" cellspacing="0">
  <tr>
    <td align="center">
      <a href="https://docs.plus/product-roadmap-q1" style="display: inline-block; background: #1a73e8; color: #ffffff; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-size: 14px; font-weight: 500; ">View Document</a>
    </td>
  </tr>
</table>


            </td>
          </tr>

          <tr>
            <td style="padding: 24px 32px; border-top: 1px solid #e5e7eb; background-color: #f9fafb;">
              <p style="margin: 0 0 8px; color: #636a76; font-size: 12px; text-align: center; line-height: 1.5;">
                You're receiving this because you have email notifications enabled.
              </p>
              <p style="margin: 0; color: #636a76; font-size: 12px; text-align: center;">
                
    <a href="https://docs.plus" style="color: #1a73e8; text-decoration: none;">Go to docs.plus</a>
  
              </p>
            </td>
          </tr>

        </table>

        <!-- Copyright -->
        <p style="margin: 24px 0 0; color: #636a76; font-size: 11px; text-align: center;">
          &copy; 2026 docs.plus. All rights reserved.
        </p>
      </td>
    </tr>
  </table>
</body>
</html>

"
`;

exports[`renderUnsubscribePage snapshot — success 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Unsubscribed - docs.plus</title>
  <style>
    * { box-sizing: border-box; margin: 0; padding: 0; }
    :root { color-scheme: light dark; }
    body {
      font-family: Helvetica, Arial, sans-serif;
      background: #eef1f6;
      color: #1f2937;
      -webkit-font-smoothing: antialiased;
    }
    main {
      min-height: 100vh;
      min-height: 100dvh;
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 32px 16px;
    }
    .column {
      width: min(100%, 400px);
      display: flex;
      flex-direction: column;
      gap: 16px;
    }
    a:focus-visible {
      outline: 2px solid #1a73e8;
      outline-offset: 2px;
    }
    .brand {
      align-self: flex-start;
      display: inline-flex;
      align-items: center;
      gap: 8px;
      min-height: 40px;
      border-radius: 8px;
      color: #1f2937;
      text-decoration: none;
      font-size: 18px;
      line-height: 28px;
      font-weight: 700;
      letter-spacing: -0.025em;
    }
    .card {
      background: #ffffff;
      border: 1px solid #dce3ed;
      border-radius: 10px;
      box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
      overflow: hidden;
    }
    .body {
      display: flex;
      flex-direction: column;
      gap: 16px;
      padding: 24px;
    }
    .heading {
      display: flex;
      flex-direction: column;
      gap: 4px;
    }
    h1 {
      font-size: 20px;
      line-height: 28px;
      font-weight: 600;
      text-wrap: balance;
    }
    .message {
      color: #69707e;
      font-size: 14px;
      line-height: 20px;
    }
    .primary {
      display: flex;
      align-items: center;
      justify-content: center;
      min-height: 40px;
      padding: 0 16px;
      border-radius: 8px;
      background: #1a73e8;
      color: #ffffff;
      text-decoration: none;
      font-size: 14px;
      font-weight: 600;
    }
    .strip {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: space-between;
      gap: 4px 16px;
      min-height: 48px;
      padding: 14px 24px;
      border-top: 1px solid #dce3ed;
      color: #636a76;
      font-size: 13px;
      line-height: 20px;
    }
    .email { flex: 1 1 auto; min-width: 0; overflow-wrap: anywhere; }
    .strip nav { margin-left: auto; }
    .quiet {
      display: inline-flex;
      align-items: center;
      min-height: 40px;
      margin: -10px 0;
      color: #1a73e8;
      text-decoration: none;
      font-weight: 600;
    }
    /* A web page, not mail: copy the webapp default dark theme (globals.scss). */
    @media (prefers-color-scheme: dark) {
      body { background: #0f172a; }
      body, .brand { color: #e5e7eb; }
      .card { background: #0b1220; border-color: #2d3f57; }
      .strip { border-top-color: #2d3f57; }
      .message, .strip { color: #a4a7ae; }
      .primary { background: #6ea8ff; color: #0b1220; }
      .quiet { color: #6ea8ff; }
      a:focus-visible { outline-color: #6ea8ff; }
    }
  </style>
</head>
<body>
  <main>
    <div class="column">
      <a class="brand" href="https://docs.plus" aria-label="docs.plus home">
        <img src="https://docs.plus/icons/logo.svg" width="24" height="24" alt="">
        <span>docs.plus</span>
      </a>
      <article class="card" aria-labelledby="unsubscribe-title">
        <div class="body">
          <div class="heading">
            <h1 id="unsubscribe-title">Unsubscribed</h1>
            <p class="message">You have been unsubscribed.</p>
          </div>
          <a class="primary" href="https://docs.plus/#settings?tab=notifications">Manage preferences</a>
        </div>
        
        <div class="strip">
          
          <p class="email">jane@example.com</p>
          
          
          <nav aria-label="Other pages">
            <a class="quiet" href="https://docs.plus">Go to docs.plus</a>
          </nav>
          
        </div>
        
      </article>
    </div>
  </main>
</body>
</html>
"
`;

exports[`renderUnsubscribePage snapshot — error 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Invalid Link - docs.plus</title>
  <style>
    * { box-sizing: border-box; margin: 0; padding: 0; }
    :root { color-scheme: light dark; }
    body {
      font-family: Helvetica, Arial, sans-serif;
      background: #eef1f6;
      color: #1f2937;
      -webkit-font-smoothing: antialiased;
    }
    main {
      min-height: 100vh;
      min-height: 100dvh;
      display: flex;
      align-items: center;
      justify-content: center;
      padding: 32px 16px;
    }
    .column {
      width: min(100%, 400px);
      display: flex;
      flex-direction: column;
      gap: 16px;
    }
    a:focus-visible {
      outline: 2px solid #1a73e8;
      outline-offset: 2px;
    }
    .brand {
      align-self: flex-start;
      display: inline-flex;
      align-items: center;
      gap: 8px;
      min-height: 40px;
      border-radius: 8px;
      color: #1f2937;
      text-decoration: none;
      font-size: 18px;
      line-height: 28px;
      font-weight: 700;
      letter-spacing: -0.025em;
    }
    .card {
      background: #ffffff;
      border: 1px solid #dce3ed;
      border-radius: 10px;
      box-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
      overflow: hidden;
    }
    .body {
      display: flex;
      flex-direction: column;
      gap: 16px;
      padding: 24px;
    }
    .heading {
      display: flex;
      flex-direction: column;
      gap: 4px;
    }
    h1 {
      font-size: 20px;
      line-height: 28px;
      font-weight: 600;
      text-wrap: balance;
    }
    .message {
      color: #69707e;
      font-size: 14px;
      line-height: 20px;
    }
    .primary {
      display: flex;
      align-items: center;
      justify-content: center;
      min-height: 40px;
      padding: 0 16px;
      border-radius: 8px;
      background: #1a73e8;
      color: #ffffff;
      text-decoration: none;
      font-size: 14px;
      font-weight: 600;
    }
    .strip {
      display: flex;
      flex-wrap: wrap;
      align-items: center;
      justify-content: space-between;
      gap: 4px 16px;
      min-height: 48px;
      padding: 14px 24px;
      border-top: 1px solid #dce3ed;
      color: #636a76;
      font-size: 13px;
      line-height: 20px;
    }
    .email { flex: 1 1 auto; min-width: 0; overflow-wrap: anywhere; }
    .strip nav { margin-left: auto; }
    .quiet {
      display: inline-flex;
      align-items: center;
      min-height: 40px;
      margin: -10px 0;
      color: #1a73e8;
      text-decoration: none;
      font-weight: 600;
    }
    /* A web page, not mail: copy the webapp default dark theme (globals.scss). */
    @media (prefers-color-scheme: dark) {
      body { background: #0f172a; }
      body, .brand { color: #e5e7eb; }
      .card { background: #0b1220; border-color: #2d3f57; }
      .strip { border-top-color: #2d3f57; }
      .message, .strip { color: #a4a7ae; }
      .primary { background: #6ea8ff; color: #0b1220; }
      .quiet { color: #6ea8ff; }
      a:focus-visible { outline-color: #6ea8ff; }
    }
  </style>
</head>
<body>
  <main>
    <div class="column">
      <a class="brand" href="https://docs.plus" aria-label="docs.plus home">
        <img src="https://docs.plus/icons/logo.svg" width="24" height="24" alt="">
        <span>docs.plus</span>
      </a>
      <article class="card" aria-labelledby="unsubscribe-title">
        <div class="body">
          <div class="heading">
            <h1 id="unsubscribe-title">Invalid Link</h1>
            <p class="message">The link is expired.</p>
          </div>
          <a class="primary" href="https://docs.plus/#settings?tab=notifications">Manage preferences</a>
        </div>
        
      </article>
    </div>
  </main>
</body>
</html>
"
`;
